<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/login_bg"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BB001A1A" />

    <ScrollView
        android:id="@+id/scrollContentRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBackRegister"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/btn_back_symbol"
                    android:padding="8dp"
                    android:background="@drawable/bg_stat_card"
                    android:src="@android:drawable/ic_media_previous"
                    app:tint="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_title"
                        android:fontFamily="@font/jomolhari_regular"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/subtitle_register"
                        android:fontFamily="@font/jomolhari_regular"
                        android:textSize="14sp"
                        android:textColor="@color/titules" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name"
                android:fontFamily="@font/jomolhari_regular"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etRegisterName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/txt_name"
                android:inputType="text"
                android:fontFamily="@font/jomolhari_regular"
                android:textColorHint="@color/text_primary"
                android:textColor="@color/text_primary"
                android:background="@drawable/bg_input_rounded"
                android:padding="12dp"
                android:layout_marginBottom="24dp"
                android:autofillHints="name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_lastName"
                android:fontFamily="@font/jomolhari_regular"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etLastNameRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/txt_lastName"
                android:inputType="text"
                android:fontFamily="@font/jomolhari_regular"
                android:textColorHint="@color/text_primary"
                android:textColor="@color/text_primary"
                android:background="@drawable/bg_input_rounded"
                android:padding="12dp"
                android:layout_marginBottom="24dp"
                android:autofillHints="name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email"
                android:fontFamily="@font/jomolhari_regular"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/txt_email"
                android:fontFamily="@font/jomolhari_regular"
                android:textColorHint="@color/text_primary"
                android:textColor="@color/text_primary"
                android:background="@drawable/bg_input_rounded"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="24dp"
                android:autofillHints="emailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_password_register"
                android:fontFamily="@font/jomolhari_regular"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_input_rounded"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/text_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_password_register"
                    android:fontFamily="@font/jomolhari_regular"
                    android:textColorHint="@color/text_primary"
                    android:textColor="@color/text_primary"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_rol"
                android:fontFamily="@font/jomolhari_regular"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/spRoleRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_input_rounded"
                android:textColor="@color/alma_button_text"
                android:popupBackground="@color/white"
                android:layout_marginBottom="40dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/btn_register"
                android:fontFamily="@font/jomolhari_regular"
                android:backgroundTint="@color/btns"
                android:textColor="@color/alma_button_text"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>